fix alignment of project images on /home

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -167,6 +167,13 @@
   text-align: start;
 }
 
+/* Fix alignment of project images on homepage */
+@media screen and (min-width: 990) {
+	.mt-5, .my-5 {
+	margin-top: 3rem !important;
+	}
+}
+
 
 /* Make the project boxes all the same height, independent of actual content to look nicer */
 /*@media screen and (min-width: 768px) {
